/**
 * # File Delete
 * Delete a file.
 */
syntax = "proto3";

package proto;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "basic_types.proto";

/**
 * Mark a file as deleted.
 */
message FileDeleteTransactionBody {
    /**
     * The file to delete.
     */
    FileID fileID = 2;
}

